# media-management-service

./: .commitlintrc.json  .dockerignore  .editorconfig  .env  .env.example  .env.local.example  .env.secrets.example  .gitignore  .gitleaksignore  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .shellcheckrc  .tarpaulin.toml  .yamllint.yml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Taskfile.yml  commitlint.config.js  deny.toml  lefthook.yml  renovate.json  rustfmt.toml
.beads/: README.md  config.yaml  metadata.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  dependency-review-config.yml  labeler.yml  pull_request_template.md  release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  performance_issue.yml  security_vulnerability.yml  task.md  task.yml
.github/workflows/: ci.yml  cleanup.yml  codeql.yml  coverage.yml  dependabot-auto-merge.yml  deploy.yml  greet.yml  license-check.yml  links.yml  lock.yml  ossf-scorecard.yml  pr-labeler.yml  pr-size.yml  release.yml  security.yml  stale.yml
.task/checksum/: build
docs/api/: API.md  openapi.yaml
docs/architecture/: ADR-001-web-framework-choice.md  ADR-002-database-toolkit-choice.md  ADR-003-storage-strategy.md  ADR-004-content-addressable-storage.md  ADR-005-compression-strategy.md  security-model.md  storage-strategy.md  system-overview.md
docs/deployment/: docker.md  kubernetes.md
docs/design/: architecture.md  database-schema.md  tech-stack.md  tooling.md
docs/development/: environment-setup.md
k8s/: configmap-template.yaml  deployment.yaml  gateway-route.yaml  ingress.yaml  networkpolicy.yaml  persistentvolumeclaim.yaml  poddisruptionbudget.yaml  secret-template.yaml  service.yaml
k8s/base/: deployment.yaml  kustomization.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  pvc.yaml  service.yaml
k8s/overlays/local/: kustomization.yaml
k8s/overlays/local/patches/: deployment-patch.yaml  pvc-patch.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/prod/patches/: deployment-patch.yaml
postman/: Media-Management-Development.postman_environment.json  Media-Management-Local.postman_environment.json  Media-Management-Service.postman_collection.json  README.md
scripts/containerManagement/: _common.sh  cleanup-container.sh  deploy-container.sh  get-container-status.sh  start-container.sh  stop-container.sh  update-container.sh
src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  health.rs  lib.rs  main.rs  middleware.rs  models.rs  presigned.rs  routes.rs  state.rs  storage.rs  telemetry.rs
src/application/dto/: mod.rs
src/application/ports/: mod.rs
src/application/use_cases/: delete_media.rs  download_media.rs  get_media.rs  get_media_by_ingredient.rs  get_media_by_recipe.rs  get_media_by_step.rs  initiate_upload.rs  list_media.rs  mod.rs  upload_media.rs
src/domain/entities/: media.rs  mod.rs  recipe.rs  user.rs
src/domain/repositories/: mod.rs
src/domain/services/: mod.rs
src/domain/value_objects/: content_hash.rs  media_type.rs  mod.rs  processing_status.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/http/: mod.rs
src/infrastructure/oauth2/: client.rs  mod.rs  models.rs  token.rs
src/infrastructure/persistence/: connection.rs  media_repository.rs  mod.rs  reconnecting_repository.rs
src/infrastructure/storage/: filesystem_storage.rs  mod.rs  presigned_urls.rs  utils.rs
src/presentation/extractors/: mod.rs
src/presentation/handlers/: media.rs
src/presentation/middleware/: auth.rs  error.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs  security.rs  validation.rs
src/presentation/routes/: mod.rs
src/test_utils/: mod.rs
tests/: get_media_endpoint_test.rs  metrics_integration_test.rs  oauth2_integration.rs  presigned_upload_test.rs  upload_media_endpoint_test.rs
tests/common/: builders.rs  fixtures.rs  mod.rs  test_app.rs
tests/integration/: media_handlers_test.rs  mod.rs  repository_test.rs
tests/unit/: error_handling_test.rs  mod.rs
