[package]
name = "media-management-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["multipart"] }
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.15"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-br", "compression-gzip", "cors", "request-id", "trace", "timeout", "limit", "set-header", "validate-request"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"
uuid = { version = "1.11.1", features = ["v4", "serde"] }
validator = "0.20.0"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
metrics = "0.24.0"
metrics-exporter-prometheus = "0.17.2"
regex = "1.11.2"
multer = "3.1.0"
sha2 = "0.10.8"
mime = "0.3.0"
bytes = "1.8.0"
futures-util = "0.3.0"
base64 = "0.22"
hmac = "0.12.1"
hex = "0.4.3"
rand = "0.8.5"
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.23", features = ["json"] }

[dev-dependencies]
reqwest = "0.12.23"
tokio-test = "0.4.4"
mockall = "0.13.1"
rstest = "0.26.1"
claims = "0.8.0"
tempfile = "3.21.0"
fake = { version = "4.4.0", features = ["derive", "uuid", "chrono"] }
proptest = "1.7.0"
wiremock = "0.6.5"
http-body-util = "0.1.2"
