[package]
name = "media-management-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["multipart"] }
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["compression-br", "compression-gzip", "cors", "request-id", "trace", "timeout", "limit", "set-header", "validate-request"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
tracing-appender = "0.2.4"
uuid = { version = "1.11.1", features = ["v4", "serde"] }
validator = "0.20.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
regex = "1.12.2"
multer = "3.1.0"
sha2 = "0.10.8"
mime = "0.3.0"
bytes = "1.11.0"
futures-util = "0.3.0"
base64 = "0.22"
hmac = "0.12.1"
hex = "0.4.3"
rand = "0.9.2"
urlencoding = "2.1.3"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.24", features = ["json"] }

[dev-dependencies]
reqwest = "0.12.24"
tokio-test = "0.4.4"
mockall = "0.14.0"
rstest = "0.26.1"
claims = "0.8.0"
tempfile = "3.23.0"
fake = { version = "4.4.0", features = ["derive", "uuid", "chrono"] }
proptest = "1.9.0"
wiremock = "0.6.5"
http-body-util = "0.1.2"
